<resources>
    <string name="app_name" translatable="false">QuotationShake</string>
    <string name="get_quotations">Get quotations</string>
    <string name="favourite_quotations">Favourite quotations</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="username_title">User name</string>
    <string name="username_summary">Name that identifies the user</string>
    <string name="username_hint">Insert your name</string>
    <string name="quotations_title">Quotation language</string>
    <string name="quotations_summary">Quotations will be received in the selected language</string>
    <string name="request_title">Request Method</string>
    <string name="request_summary">Web requests will be performed using the selected HTTP method</string>
    <string name="get" translatable="false">GET</string>
    <string name="post" translatable="false">POST</string>
    <string name="author_info">Author info</string>
    <string name="refresh_to_quotation">Hello  %1s! \nPress Refresh to get a new quotation</string>
    <string name="storage_settings">Storage settings</string>
    <string name="database_preference">Used database</string>
    <string name="database_summary">The preferred database where store favourite quotations</string>
    <string name="sqlite_open_helper" translatable="false">SQLiteOpenHelper</string>
    <string name="room" translatable="false">Room</string>
    <string name="about_info">Quotation Shake by\n\nZakaria Bouyajdad Israel Sanjurjo\n\n zabou@inf.upv.es issancue@inf.upv.es\n\n2020</string>
    <string name="name_that_identifies_user">Name that identifies the user</string>
    <string name="insert_your_name">Insert your name</string>
    <string name="quotations_will_be">Quotations will be received in the selected language</string>
    <string name="web_request_type">Web requests will be performed using the selected HTTP method</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="errorNoAuthor">"Error: not able to obtain author"</string>
    <string name="removeQuoteDialogMessage">Are you sure that you want to delete this quote?</string>
    <string name="clearQuotesDialogMessage">Are you sure that you want to delete ALL your favourite quotes?</string>
    <string name="favMenuItemTitle">Add</string>
    <string name="refreshMenuItemTitle">Refresh</string>
    <string name="clearAllMenuItemTitle">Clear All</string>
</resources>
