<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/username"
        android:title="@string/username_title"
        android:summary="@string/username_summary"
        android:hint="@string/username_hint" />

    <PreferenceCategory
        android:title="@string/get_quotations">
        <ListPreference
            android:title="@string/quotations_title"
            android:summary="@string/quotations_summary">

        </ListPreference>

        <ListPreference
            android:title="@string/request_title"
            android:summary="@string/request_summary">

        </ListPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/storage_settings">
        <ListPreference
            android:title="@string/database_preference"
            android:summary="@string/database_summary">
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>